<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    tools:ignore="ExtraText"
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_gravity="left"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/backarrow"

            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/security" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:layout_weight="250"
            android:fontFamily="@font/bungee"
            android:text="@string/forget_password"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#0C0C0C" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="18"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/forget_password_detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#191919" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/phonenumberonforgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:elevation="8dp"
            android:layout_margin="20dp"
            android:hint="@string/enter_phone_no"
            app:hintAnimationEnabled="true"
            app:counterMaxLength="10"
            app:counterEnabled="true"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#000000"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="5dp">

            </com.google.android.material.textfield.TextInputEditText></com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/nextbuttononforgetpasswordscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/round_button_rectangle"
            android:gravity="center"
            android:text="@string/Next_btn"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>


    </LinearLayout>
</ScrollView>