<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    tools:ignore="ExtraText"
    android:background="#FFFFFF"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/newpassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:layout_weight="100"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:text="@string/new_credentials"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#0C0C0C" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_weight="200"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/new_credentials_detail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#0C0C0C" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:hint="New password"
            android:id="@+id/Newpsswrd"
            app:passwordToggleEnabled="true"
            android:transitionName="password_transi">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="5dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:hint="Confrim new pasword"
            android:id="@+id/newconfirmpsswrd"
            app:passwordToggleEnabled="true"
            android:transitionName="password_transi">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="5dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/nextbuttononforgetpasswordscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/round_button_rectangle"
            android:gravity="center"
            android:text="@string/Next_btn"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF" />
    </LinearLayout>
</ScrollView>